--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+*,
+*::before,
+*::after {
+  font-size: 16px;
+  font-style: "Lucida Sans Unicode", "Wingdings";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.text-bar {
+  position: absolute;
+  top: 0;
+  right: 50%;
+  transform: translateX(50%);
+  width: 40vw;
+  height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inner-text-bar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 3em;
 }
 
-.App-link {
-  color: #61dafb;
+.input-text {
+  width: 100%;
+  line-height: 2em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.send-icon {
+  height: 2em;
+}
+
+.chat {
+  height: calc(100vh - 140px);
+  overflow-y: scroll;
+}
+
+.chat::-webkit-scrollbar {
+  display: none;
+}
+
+.inner-chat-wrapper {
+  display: flex;
+  justify-content: end;
+  width: 100%;
+}
+
+.inner-chat {
+  border-top: 1px solid #F0F0F0;
+  background-color: #F0F0F0;
+  padding: 0.5em 2em;
+  margin: 1em;
+  border-radius: 5em 5em 0 5em;
+  max-width: 60%;
+}
+
+.chat p {
+  word-wrap: break-word;
+  padding: 0 1em;
 }
